force-app/main/default/objects/Account/fields/Sprint_1__c.field-meta.xml
<CustomField>
    <fullName>Sprint_1__c</fullName>
    <label>Sprint 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>