force-app/main/default/objects/Account/fields/Sprint_2__c.field-meta.xml
<CustomField>
    <fullName>Sprint_2__c</fullName>
    <label>Sprint 2</label>
    <type>TextArea</type>
</CustomField>