force-app/main/default/objects/Account/fields/Sprint_Pilot_2__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Pilot_2__c</fullName>
    <label>Sprint Pilot-2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>