force-app/main/default/objects/Account/fields/Sprint_Pilot__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Pilot__c</fullName>
    <label>Sprint Pilot</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>