force-app/main/default/objects/Account/fields/test_acc_owner__c.field-meta.xml
<CustomField>
    <fullName>test_acc_owner__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <description>test</description>
    <label>test acc owner</label>
    <type>TextArea</type>
</CustomField>