force-app/main/default/objects/Account/fields/test_acc_sub_owner__c.field-meta.xml
<CustomField>
    <fullName>test_acc_sub_owner__c</fullName>
    <label>test acc sub owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>