force-app/main/default/objects/Account/fields/test_case_id__c.field-meta.xml
<CustomField>
    <fullName>test_case_id__c</fullName>
    <label>test case id</label>
    <type>TextArea</type>
</CustomField>