force-app/main/default/objects/Account/fields/test_case_num__c.field-meta.xml
<CustomField>
    <fullName>test_case_num__c</fullName>
    <label>test case num</label>
    <length>255</length>
    <type>Text</type>
</CustomField>