force-app/main/default/objects/Account/fields/test_phone__c.field-meta.xml
<CustomField>
    <fullName>test_phone__c</fullName>
    <label>test phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>